CVEs/CVE-2019-1010315 (WavPack)/Reports/Source Code Reports/CPPCheck.txt
WavPack/audition/cool_wv4.c:309:17: error: Used file that is not opened. [useClosedFile]
                fclose (out->wv_file.file);
                ^
WavPack/audition/cool_wv4.c:309:17: error: Resource handle 'file' freed twice. [doubleFree]
                fclose (out->wv_file.file);
                ^
WavPack/audition/cool_wv4.c:305:13: note: Resource handle 'file' freed twice.
            fclose (out->wv_file.file);
            ^
WavPack/audition/cool_wv4.c:309:17: note: Resource handle 'file' freed twice.
                fclose (out->wv_file.file);
                ^
WavPack/cli/wavpack.c:765:17: error: Common realloc mistake: 'tag_items' nulled but not freed upon failure [memleakOnRealloc]
                tag_items = realloc (tag_items, ++num_tag_items * sizeof (*tag_items));
                ^
WavPack/cli/wavpack.c:1933:17: error: Common realloc mistake: 'buffer' nulled but not freed upon failure [memleakOnRealloc]
                buffer = realloc (buffer, buffer_size += 65536);
                ^
WavPack/cli/wavpack.c:3291:39: error: Uninitialized variable: format_buffer [uninitvar]
                unsigned char *dptr = format_buffer;
                                      ^
WavPack/cli/wavpack.c:3319:32: error: Uninitialized variable: format_buffer [uninitvar]
                store_samples (format_buffer, sample_buffer, qmode, bps, sample_count * num_channels);
                               ^
WavPack/cli/wavpack.c:3321:39: error: Uninitialized variable: format_buffer [uninitvar]
            MD5_Update (&md5_context, format_buffer, bps * sample_count * num_channels);
                                      ^
WavPack/cli/wvtag.c:335:17: error: Common realloc mistake: 'tag_items' nulled but not freed upon failure [memleakOnRealloc]
                tag_items = realloc (tag_items, ++num_tag_items * sizeof (*tag_items));
                ^
WavPack/cli/wvtag.c:360:13: error: Common realloc mistake: 'tag_items' nulled but not freed upon failure [memleakOnRealloc]
            tag_items = realloc (tag_items, ++num_tag_items * sizeof (*tag_items));
            ^
WavPack/cli/wvtag.c:910:5: error: Common realloc mistake: 'tag_extractions' nulled but not freed upon failure [memleakOnRealloc]
    tag_extractions = realloc (tag_extractions, (num_tag_extractions + 1) * sizeof (*tag_extractions));
    ^
WavPack/cli/wvtag.c:1330:16: error: Memory is allocated but not initialized: temp [uninitdata]
        fputs (temp, dst);
               ^
WavPack/cli/wvunpack.c:1800:5: error: Common realloc mistake: 'tag_extractions' nulled but not freed upon failure [memleakOnRealloc]
    tag_extractions = realloc (tag_extractions, (num_tag_extractions + 1) * sizeof (*tag_extractions));
    ^
WavPack/cli/wvunpack.c:2644:16: error: Memory is allocated but not initialized: temp [uninitdata]
        fputs (temp, dst);
               ^
WavPack/src/read_words.c:596:36: error: Array 'bitmask[32]' accessed at index -1, which is out of bounds. [negativeIndex]
    if ((code = local_sr & bitmask [bitcount - 1]) >= extras)
                                   ^
WavPack/src/read_words.c:578:16: note: Assignment 'bitcount=(maxcode)?32-__builtin_clz(maxcode):0', assigned value is 0
    bitcount = count_bits (maxcode);
               ^
WavPack/src/read_words.c:596:36: note: Negative array index
    if ((code = local_sr & bitmask [bitcount - 1]) >= extras)
                                   ^
WavPack/src/unpack3_open.c:161:27: error: The address of local variable 'wphdr' is accessed at non-zero index. [objectIndex]
    if (((char *) &wphdr) [8] == 2 && (wpc->reader->read_bytes (wpc->wv_in, ((char *) &wphdr) + 10, 2) != 2)) {
                          ^
WavPack/src/unpack3_open.c:161:19: note: Address of variable taken here.
    if (((char *) &wphdr) [8] == 2 && (wpc->reader->read_bytes (wpc->wv_in, ((char *) &wphdr) + 10, 2) != 2)) {
                  ^
WavPack/src/unpack3_open.c:161:27: note: The address of local variable 'wphdr' is accessed at non-zero index.
    if (((char *) &wphdr) [8] == 2 && (wpc->reader->read_bytes (wpc->wv_in, ((char *) &wphdr) + 10, 2) != 2)) {
                          ^
WavPack/src/unpack3_open.c:165:32: error: The address of local variable 'wphdr' is accessed at non-zero index. [objectIndex]
    else if (((char *) &wphdr) [8] == 3 && (wpc->reader->read_bytes (wpc->wv_in, ((char *) &wphdr) + 10,
                               ^
WavPack/src/unpack3_open.c:165:24: note: Address of variable taken here.
    else if (((char *) &wphdr) [8] == 3 && (wpc->reader->read_bytes (wpc->wv_in, ((char *) &wphdr) + 10,
                       ^
WavPack/src/unpack3_open.c:165:32: note: The address of local variable 'wphdr' is accessed at non-zero index.
    else if (((char *) &wphdr) [8] == 3 && (wpc->reader->read_bytes (wpc->wv_in, ((char *) &wphdr) + 10,
                               ^
WavPack/src/unpack3_open.c:45:5: error: Memory is allocated but not initialized: wps [uninitdata]
    CLEAR (*wps);
    ^
WavPack/xmms/src/tags.cpp:108:49: error: Null pointer dereference [nullPointer]
        if ((c = wcsrtombs(temp, &src, MAX_LEN, NULL)) == 0)
                                                ^
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

